[package]
name = "telekinetic"
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
enigo = "0.1.2"
flexi_logger = "0.25.5"
futures = "0.3.28"
log = "0.4.19"
windows-service = "0.6.0"
windows-sys = "0.48.0"
winit = "0.28.6"

[[bin]]
name = "mouse_simulator"

[build-dependencies]
fs_extra = "1.3.0"
cc = "1.0.79"
